--- a/src/components/calculator.scss
+++ b/src/components/calculator.scss
@@ -17,10 +17,12 @@
     background-color: rgb(185, 185, 185);
     border-radius: 5px 5px 0 0;
     padding: 0 10px;
+    height: 40px;
 
     p {
       font-weight: bold;
       text-align: right;
+      font-size: 2rem;
     }
   }
 
